monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4058/A4058.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4058;

grammar A4058 {

  A = "123";

}
